--- a/themes/doingstuff-zola/sass/doingstuff/_variables.scss
+++ b/themes/doingstuff-zola/sass/doingstuff/_variables.scss
@@ -18,7 +18,7 @@ $cyan: #75b5aa;
 $blue: #167bc2;
 $brown: #8f5536;
 
-$root-font-family: "InterVariable", system-ui, sans-serif;
+$root-font-family: 'Atkinson Hyperlegible Next', system-ui, sans-serif;
 
 // poole's variables
 $root-font-size: 1rem;
@@ -41,7 +41,7 @@ $small-device-font-size: $root-font-size;
 $large-device-font-size: $large-font-size;
 
 // https://github.com/system-fonts/modern-font-stacks
-$code-font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
+$code-font-family: 'Atkinson Hyperlegible Mono', ui-monospace, monospace;
 $code-font-size: .9rem;
 $code-fence-font-size: .8rem;
 //$code-color: #bf616a;
